# ch347-py

./: .gitignore  README.md  README_en.md  pyproject.toml
ch347/: __init__.py  ch347.py
i2c_devices/ina226/: ina226.py
i2c_devices/mpu6050/: mpu6050.py
spi_devices/sd_nand/: __init__.py  sd_nand.py
tests/: test_device.py  test_gpio_intr.py  test_ina226.py  test_mpu6050.py  test_sd_nand.py  test_spi_write.py  test_uart.py
